# elan

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  testfile.json
.github/workflows/: ci.yml
api/: .flaskenv  Dockerfile  pyproject.toml  requirements.txt
api/app/: config.py  fake.py  init.py  models.py  schemes.py  simple.py
api/app/routes/: auth.py  genre.py  genres.py  lesson.py  movie.py  pair.py  practice.py  users.py
api/legacy/: main.py  words.py
api/tests/: conftest.py
api/tests/routes/: test_genre.py  test_lesson.py  test_movie.py  test_practice.py  test_user.py
app/: __init__.py  auth.py  config.py  init.py  models.py  run.py  schemes.py
app/main/: forms.py  routes.py
app/models/: exception.py  lesson.py  models.py  pair.py  token.py  user.py
app/routes/: auth.py  lesson.py  pair.py  url.py  users.py
app/static/styles/: index.css
app/templates/: base.html  index.html  login.html
elan/: elan.py  main.py  ui.py  words.py
examples/: vocabulary.json
legacy/: main.py
test/: test_wordchecker.py
tests/: conftest.py  test_login.py  test_main.py  test_models.py  test_wordchecker.py
tests/models/: test_lesson.py  test_pair.py  test_user.py
tests/routes/: test_lesson.py  test_pair.py  test_user.py
ui/: Dockerfile  package-lock.json  package.json
ui/src/: App.css  App.tsx  auth.tsx  config.json  fakeBackend.tsx  index.tsx  lessonTable.tsx  movieComponent.tsx  movieTable.tsx  paginate.tsx  react-app-env.d.ts  schemes.tsx
(+24 files in other folders)
